--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
-<html>
+<html ng-app="BoFAdmin">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>BoF Admin</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous">
 
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="app/assets/css/main.css">
 </head>
+
 <body>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default">
@@ -17,10 +21,10 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">BoF Admin</a>
             </div>
-             <div id="navbar" class="navbar-collapse collapse">
+            <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
-            <!--        <li class="dropdown">
+                    <!--        <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profiles <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Person</a></li>
@@ -29,7 +33,8 @@
                     </li>
             -->
                 </ul>
-            </div><!--/.nav-collapse -->
+            </div>
+            <!--/.nav-collapse -->
         </div>
     </nav>
 
@@ -43,16 +48,16 @@
                             <div class="panel-heading">
                                 <h3 class="panel-title">Filter Profiles</h3>
                             </div>
-                            <div class="panel-body" >
-                                <div class="panel-heading " >
+                            <div class="panel-body">
+                                <div class="panel-heading ">
                                     <h4 class="panel-title">Search</h4>
                                 </div>
                                 <form action="/profiles">
                                     <div class="input-group">
-                                      <input name="q" type="text" class="form-control" placeholder="Search by anything" aria-describedby="sizing-addon2">
+                                        <input name="q" type="text" class="form-control" placeholder="Search by anything" aria-describedby="sizing-addon2">
                                     </div>
-                                </form>  
-                                <div class="panel-heading " >
+                                </form>
+                                <div class="panel-heading ">
                                     <h4 class="panel-title">Enabled</h4>
                                 </div>
                                 <div>
@@ -66,7 +71,7 @@
                                             </div>
                                         </li>
                                         <li class="list-group-item">
-                                            <div class="checkbox" >
+                                            <div class="checkbox">
                                                 <label>
                                                     <input type="checkbox" value="">
                                                     No
@@ -76,7 +81,7 @@
                                     </ul>
                                 </div>
                                 <!-- END Enabled-->
-                                <div class="panel-heading " >
+                                <div class="panel-heading ">
                                     <h4 class="panel-title">Visible</h4>
                                 </div>
                                 <div>
@@ -90,7 +95,7 @@
                                             </div>
                                         </li>
                                         <li class="list-group-item">
-                                            <div class="checkbox" >
+                                            <div class="checkbox">
                                                 <label>
                                                     <input type="checkbox" value="">
                                                     No
@@ -100,14 +105,16 @@
                                     </ul>
                                 </div>
                                 <!-- END Visible-->
-                            </div>  
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-9">
                 <div class="row">
-                    <div class="col-md-12"><h4>Results:</h4></div>
+                    <div class="col-md-12">
+                        <h4>Results:</h4>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
@@ -138,24 +145,33 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="pagination col-md-pull-5">
-                          <li><a href="#">1</a></li>
-                          <li><a href="#">2</a></li>
-                          <li><a href="#">3</a></li>
-                          <li><a href="#">4</a></li>
-                          <li><a href="#">5</a></li>
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        
 
-    </div> <!-- /container -->
+
+    </div>
+    <!-- /container -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
     <script src="vendor/lodash/lodash.js"></script>
     <script src="vendor/angular/angular.js"></script>
 
-    <script src="app/admin.js"></script>
+    <script src="app/app.module.js"></script>
+    <script src="app/app.config.js"></script>
+    <script src="app/core/core.module.js"></script>
+    <script src="app/profile-edit/profile-edit.module.js"></script>
+    <script src="app/profile-edit/profile-edit.component.js"></script>
+    <script src="app/profile-list/profile-list.module.js"></script>
+    <script src="app/profile-list/profile-list.component.js"></script>
 </body>
+
 </html>
