Factory setup for HTTP calls ($resource)

--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,13 @@
     <script src="vendor/lodash/lodash.js"></script>
     <script src="vendor/angular/angular.js"></script>
     <script src="vendor/angular-route/angular-route.js"></script>
+    <script src="vendor/angular-resource/angular-resource.js"></script>
 
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
     <script src="core/core.module.js"></script>
+    <script src="core/profiles/profiles.module.js"></script>
+    <script src="core/profiles/profiles.service.js"></script>
     <script src="profile-edit/profile-edit.module.js"></script>
     <script src="profile-edit/profile-edit.component.js"></script>
     <script src="profile-list/profile-list.module.js"></script>
