--- a/public/profile-list/profile-list.template.html
+++ b/public/profile-list/profile-list.template.html
@@ -37,7 +37,7 @@
                             </div>
                             <form action="/profiles">
                                 <div class="input-group">
-                                    <input name="q" type="text" class="form-control" placeholder="Search by anything" aria-describedby="sizing-addon2">
+                                    <input name="q" type="text" class="form-control" placeholder="Search by anything" aria-describedby="sizing-addon2" ng-model="$ctrl.search" ng-change="$ctrl.setFilter('search', $ctrl.search)">
                                 </div>
                             </form>
                             <div class="panel-heading ">
@@ -48,7 +48,7 @@
                                     <li class="list-group-item">
                                         <div class="checkbox">
                                             <label>
-                                                    <input type="checkbox" value="">
+                                                    <input type="checkbox" ng-model="$ctrl.isEnabled" ng-click="$ctrl.setFilter('is_enabled', $ctrl.isEnabled)">
                                                     Yes
                                                 </label>
                                         </div>
@@ -56,7 +56,7 @@
                                     <li class="list-group-item">
                                         <div class="checkbox">
                                             <label>
-                                                    <input type="checkbox" value="">
+                                                    <input type="checkbox" ng-model="$ctrl.isDisabled" ng-click="$ctrl.setFilter('is_disabled', $ctrl.isDisabled)">
                                                     No
                                                 </label>
                                         </div>
@@ -72,7 +72,7 @@
                                     <li class="list-group-item">
                                         <div class="checkbox">
                                             <label>
-                                                    <input type="checkbox" value="">
+                                                    <input type="checkbox" ng-model="$ctrl.isVisible" ng-click="$ctrl.setFilter('is_visible', $ctrl.isVisible)">
                                                     Yes
                                                 </label>
                                         </div>
@@ -80,7 +80,7 @@
                                     <li class="list-group-item">
                                         <div class="checkbox">
                                             <label>
-                                                    <input type="checkbox" value="">
+                                                    <input type="checkbox" ng-model="$ctrl.isHidden" ng-click="$ctrl.setFilter('is_hidden', $ctrl.isHidden)">
                                                     No
                                                 </label>
                                         </div>
@@ -134,7 +134,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="pagination col-md-pull-5">
-                        <li ng-repeat="pageNumber in $ctrl.paginationNumbers" ng-class="{active : pageNumber === $ctrl.pageNumber}"><a href="" ng-click="$ctrl.getProfiles(pageNumber)">{{pageNumber}}</a></li>
+                        <li ng-repeat="pageNumber in $ctrl.paginationNumbers" ng-class="{active : pageNumber === $ctrl.searchQuery._page}"><a href="" ng-click="$ctrl.goToPage(pageNumber)">{{pageNumber}}</a></li>
                     </ul>
                 </div>
             </div>
