--- a/public/profile-list/profile-list.template.html
+++ b/public/profile-list/profile-list.template.html
@@ -113,7 +113,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="text-" ng-repeat="profile in $ctrl.profiles track by profile.id">
+                            <tr class="text-" ng-repeat="profile in $ctrl.profiles track by profile.id" ng-click="$ctrl.goToProfile(profile.id)">
                                 <td><img ng-src="{{ 'https://images.businessoffashion.com/' + profile.thumbnail.file + '?crop=focalpoint&fit=crop&w=80&h=80' }}"></td>
                                 <td>{{ profile.profile_title }}</td>
                                 <td>{{ profile.profile_sub_title }}</td>
