--- a/public/profile-edit/profile-edit.template.html
+++ b/public/profile-edit/profile-edit.template.html
@@ -29,7 +29,7 @@
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="#">Home</a></li>
 					<li class="breadcrumb-item"><a href="#">Library</a></li>
-					<li class="breadcrumb-item active">Gianvito Rossi</li>
+					<li class="breadcrumb-item active">{{$ctrl.profile.first_name + ' ' + $ctrl.profile.last_name}}</li>
 				</ol>
 			</div>
 		</div>
@@ -37,17 +37,13 @@
 			<div class="row">
 				<div class="col-md-2">
 					<div>
-						<img class="thumbnail" src="http://img.businessoffashion.com/170/170/magic/profiles/asset/182/184c41b5f921f6c4b3121deb6ea3bc8f8fc11bd9.jpeg"></div>
+						<img class="thumbnail" ng-src="{{ 'https://images.businessoffashion.com/' + $ctrl.profile.thumbnail.file + '?crop=focalpoint&fit=crop&w=150&h=150' }}"></div>
 
 					<p>Change thumbnail:</p>
 					<div class="row">
-						<div class="col-xs-6">
-							<a href="#" class="thumbnail"><img src="http://img.businessoffashion.com/80/80/magic/profiles/asset/182/hd-gianvito-rossi-portrait-1-(1)-1529136859364036.jpeg">								</a>
+						<div class="col-xs-6" ng-repeat="image in $ctrl.profile.assets">
+							<a href="" class="thumbnail" ng-class="{active : image.path === $ctrl.profile.thumbnail.file}" ng-click="$ctrl.selectProfileThumbnail(image)"><img ng-src="{{ 'https://images.businessoffashion.com/' + image.path + '?crop=focalpoint&fit=crop&w=80&h=80' }}"></a>
 						</div>
-						<div class="col-xs-6">
-							<a href="" class="thumbnail active"><img src="http://img.businessoffashion.com/80/80/magic/profiles/asset/182/184c41b5f921f6c4b3121deb6ea3bc8f8fc11bd9.jpeg"></a>
-						</div>
-
 					</div>
 				</div>
 				<div class="col-md-9">
@@ -56,23 +52,23 @@
 						<div class="row form-group">
 							<div class="col-xs-3">
 								<div class="input-group-lg">
-									<input type="text" class="form-control" placeholder="First Name" aria-describedby="sizing-addon1">
+									<input type="text" class="form-control" placeholder="First Name" aria-describedby="sizing-addon1" ng-model="$ctrl.profile.first_name">
 								</div>
 							</div>
 							<div class="col-xs-3">
 								<div class="input-group-lg">
-									<input type="text" class="form-control" placeholder="Last Name" aria-describedby="sizing-addon1">
+									<input type="text" class="form-control" placeholder="Last Name" aria-describedby="sizing-addon1" ng-model="$ctrl.profile.last_name">
 								</div>
 							</div>
 						</div>
 						<div class="row form-group">
 							<div class="col-xs-12">
-								<input type="text" class="form-control" placeholder="Sub Title" aria-describedby="sizing-addon1">
+								<input type="text" class="form-control" placeholder="Sub Title" aria-describedby="sizing-addon1" ng-model="$ctrl.profile.profile_sub_title">
 							</div>
 						</div>
 						<div class="row form-group">
 							<div class="col-xs-12">
-								<input type="text" class="form-control" placeholder="Summary" aria-describedby="sizing-addon1">
+								<input type="text" class="form-control" placeholder="Summary" aria-describedby="sizing-addon1" ng-model="$ctrl.profile.summary">
 							</div>
 						</div>
 
@@ -80,15 +76,15 @@
 						<div class="row form-group">
 							<div class="form-check form-check-inline">
 								<label class="form-check-label  col-xs-offset-1">
-								    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1"> Enabled
+								    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1" ng-model="$ctrl.profile.is_enabled"> Enabled
 								  </label>
 								<label class="form-check-label col-xs-offset-1">
-								    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2"> Visible
+								    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" ng-model="$ctrl.profile.is_visible"> Visible
 								  </label>
 							</div>
 						</div>
 						<div>
-							<button style="float: right;" type="submit" class="btn btn-primary">
+							<button style="float: right;" type="submit" class="btn btn-primary" ng-click="$ctrl.saveProfile()">
 									Save
 								</button>
 						</div>
