--- a/public/profile-edit/profile-edit.template.html
+++ b/public/profile-edit/profile-edit.template.html
@@ -1,4 +1,3 @@
-<!-- Fixed navbar -->
 <nav class="navbar navbar-default">
 	<div class="container">
 		<div class="navbar-header">
@@ -7,22 +6,12 @@
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#">Home</a></li>
-				<!--        <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profiles <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Person</a></li>
-                            <li><a href="#">Company</a></li>
-                        </ul>
-                    </li>
-            -->
 			</ul>
 		</div>
-		<!--/.nav-collapse -->
 	</div>
 </nav>
 
 <div class="container mt-5">
-
 	<div class="row">
 		<div class="row">
 			<div class="col-md-12">
@@ -37,8 +26,8 @@
 			<div class="row">
 				<div class="col-md-2">
 					<div>
-						<img class="thumbnail" ng-src="{{ 'https://images.businessoffashion.com/' + $ctrl.profile.thumbnail.file + '?crop=focalpoint&fit=crop&w=150&h=150' }}"></div>
-
+						<img class="thumbnail" ng-src="{{ 'https://images.businessoffashion.com/' + $ctrl.profile.thumbnail.file + '?crop=focalpoint&fit=crop&w=150&h=150' }}">
+					</div>
 					<p>Change thumbnail:</p>
 					<div class="row">
 						<div class="col-xs-6" ng-repeat="image in $ctrl.profile.assets">
@@ -91,7 +80,6 @@
 					</form>
 				</div>
 			</div>
-
 		</div>
 	</div>
 </div>
