--- a/public/profile-list/profile-list.template.html
+++ b/public/profile-list/profile-list.template.html
@@ -1,4 +1,3 @@
-<!-- Fixed navbar -->
 <nav class="navbar navbar-default">
     <div class="container">
         <div class="navbar-header">
@@ -7,22 +6,12 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <!--        <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profiles <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Person</a></li>
-                            <li><a href="#">Company</a></li>
-                        </ul>
-                    </li>
-            -->
             </ul>
         </div>
-        <!--/.nav-collapse -->
     </div>
 </nav>
 
 <div class="container mt-5">
-
     <div class="row">
         <div class="col-md-3">
             <div class="row">
@@ -63,7 +52,6 @@
                                     </li>
                                 </ul>
                             </div>
-                            <!-- END Enabled-->
                             <div class="panel-heading ">
                                 <h4 class="panel-title">Visible</h4>
                             </div>
@@ -87,7 +75,6 @@
                                     </li>
                                 </ul>
                             </div>
-                            <!-- END Visible-->
                         </div>
                     </div>
                 </div>
@@ -134,6 +121,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="pagination col-md-pull-5">
+                        {{ pageNumber }}
                         <li ng-repeat="pageNumber in $ctrl.paginationNumbers" ng-class="{active : pageNumber === $ctrl.searchQuery._page}"><a href="" ng-click="$ctrl.goToPage(pageNumber)">{{pageNumber}}</a></li>
                     </ul>
                 </div>
